Bug 39063 - [Qt] Tiled backing store checker pattern does not paint correctly when scaling factor is not 1
Summary: [Qt] Tiled backing store checker pattern does not paint correctly when scalin...
Status: CLOSED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: New Bugs (show other bugs)
Version: 528+ (Nightly build)
Hardware: PC OS X 10.5
: P3 Normal
Assignee: Nobody
URL:
Keywords: Qt
Depends on:
Blocks: 35784
  Show dependency treegraph
 
Reported: 2010-05-13 07:14 PDT by Antti Koivisto
Modified: 2010-05-29 01:24 PDT (History)
1 user (show)

See Also:


Attachments
Use the dirty rect that has been adjusted for scaling instead of the original one (1.69 KB, patch)
2010-05-13 07:26 PDT, Antti Koivisto
kenneth: review+
Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Antti Koivisto 2010-05-13 07:14:19 PDT
The checker pattern drawing area is determined without taking the scaling factor into account. The pattern does not paint correctly when scaling is other than 1, except on the top of the document.
Comment 1 Antti Koivisto 2010-05-13 07:26:36 PDT
Created attachment 55974 [details]
Use the dirty rect that has been adjusted for scaling instead of the original one
Comment 2 Antti Koivisto 2010-05-13 07:35:47 PDT
Sending        WebCore/ChangeLog
Sending        WebCore/platform/graphics/TiledBackingStore.cpp
Transmitting file data ..
Committed revision 59363.
Comment 3 Simon Hausmann 2010-05-28 07:09:49 PDT
<cherry-pick-for-backport: r59363>
Comment 4 Simon Hausmann 2010-05-29 01:24:34 PDT
Revision r59363 cherry-picked into qtwebkit-2.0 with commit 59c4c96c6aa7342f59956b6cb530f114cdfdcba5