https://bugs.webkit.org/show_bug.cgi?id=39063 [Qt] Tiled backing store checker pattern does not paint correctly when scaling factor is not 1

Reviewed by Kenneth Rohde Christiansen.

Use the dirty rect that has been adjusted for scaling instead of the original one.

* platform/graphics/TiledBackingStore.cpp:
(WebCore::TiledBackingStore::paint):



Canonical link: https://commits.webkit.org/50552@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@59363 268f45cc-cd09-0410-ab3c-d52691b4dbfc